--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-    @import url('https://fonts.googleapis.com/css2?family=Rajdhani&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
 
     body {
         margin: 0;
@@ -35,20 +35,32 @@
     }
 
     main > h1 {
-        font-family: 'Rajdhani';
+        font-family: 'Patrick Hand';
         font-weight: 400;
-        font-size: 2.5em;
+        font-size: 3em;
         color: white;
         margin: 0;
         text-align: center;
+        letter-spacing: 5px;
     }
 
     main > hr {
         width: 20%;
         border: solid white 1px;
+        border-radius: 20px;
+        height: 0.2em;
+        background-color: white;
+        margin: 0;
+        position: relative;
+        left: 40%;
     }
 
     main > img {
-        width: 50%;
-        height: 50%;
+        position: absolute;
+        top: 160px;
+        left: 820px;
+        border-radius: 50%;
+        width: 200px;
+        height: 200px;
+        border: solid white 5px;
     }   
