--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@
     }
 
     img {
+        width: 100px;
         border-radius: 100px;
     }
 
@@ -87,8 +88,9 @@
     main > div > span.borda {
         padding: 5px;
         justify-content: center;
+        width: 100px;
         display: flex;
-        border-radius: 50%;
+        border-radius: 50%  ;
         background: linear-gradient(-45deg,  #484442, #FDE7B5, #FD9D55, #484442);
         animation: fundo 5s ease-in-out infinite;
         background-size: 400% 400%;
